Fix App Diagnostics crawler: connection verification, increased timeout, faster tests

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -72,7 +72,7 @@
                         <h1 class="logo-text">OITH</h1>
                         <p class="logo-tagline">One In The Hand</p>
                     </div>
-                    <p class="splash-subtitle">Quality dates, not endless swipes</p>
+                    <p class="splash-subtitle">This time it's personal</p>
                     <button class="btn btn-primary" onclick="showScreen('onboarding-1')">Get Started</button>
                     <button class="btn btn-text" onclick="showScreen('login')">I already have an account</button>
                 </div>
@@ -618,7 +618,7 @@
                                 <div style="font-weight: 600; font-size: 0.9rem;">Test Mode Active</div>
                                 <div style="font-size: 0.75rem; opacity: 0.9;">No real charges - for development only</div>
                             </div>
-                        </div>
+                </div>
                     </div>
                     
                     <button class="btn btn-primary" onclick="showPaymentForm()" id="subscribeBtn" style="width: 100%; padding: 16px; font-size: 1rem; font-weight: 600;">
@@ -4074,7 +4074,7 @@
         </div>
     </div>
 
-    <script src="app.js?v=24"></script>
+    <script src="app.js?v=29"></script>
     <script>
         // Quick login helper - run in console if having login issues
         window.quickLogin = function() {
