Fix: Remove non-existent end-connection screen, add manage-photos to crawler

--- a/prototype/manager.html
+++ b/prototype/manager.html
@@ -7672,7 +7672,8 @@
                     { id: 'safety-privacy', name: 'Safety & Privacy', flow: 'settings', nextScreens: ['settings'] },
                     // Feedback
                     { id: 'feedback-metrics', name: 'Feedback & Metrics', flow: 'feedback', nextScreens: ['chat-list'] },
-                    { id: 'end-connection', name: 'End Connection', flow: 'feedback', nextScreens: ['chat-list', 'match'] }
+                    // Photos management
+                    { id: 'manage-photos', name: 'Manage Photos', flow: 'profile', nextScreens: ['edit-profile', 'my-profile'] }
                 ];
 
                 // Filter screens by flow if specified
