Add AWS Lambda for user profile sync to DynamoDB

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -2962,6 +2962,9 @@
                         </div>
                     </div>
                     </div>
+                    <button class="btn btn-secondary" onclick="exportMyProfile()" style="width: 100%; margin-bottom: 12px;">
+                        <span style="margin-right: 8px;">📤</span> Export My Profile Data
+                    </button>
                     <button class="btn btn-text logout-btn" onclick="logout()">Log Out</button>
                     <button class="btn btn-text danger delete-account-btn" onclick="resetAllData()">Delete Account & Data</button>
                 </div>
