Add Refresh from Cloud button for users to manually sync AWS profiles

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -3514,6 +3514,19 @@
                         <span class="countdown-time" id="nextMatchCountdown">--:--</span>
                     </div>
                     
+                    <!-- Sync from Cloud Option -->
+                    <div class="adjust-preferences-card" style="margin-bottom: 12px; background: linear-gradient(135deg, #ff9900 0%, #ff6600 100%);">
+                        <h4 style="color: white;">☁️ Sync New Profiles</h4>
+                        <p style="color: rgba(255,255,255,0.9);">Load the latest users from the cloud</p>
+                        <button class="btn" onclick="refreshFromCloud()" style="background: white; color: #ff6600;">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M23 4v6h-6"/>
+                                <path d="M20.49 15a9 9 0 1 1-2.12-9.36L23 10"/>
+                            </svg>
+                            Refresh from Cloud
+                        </button>
+                    </div>
+                    
                     <!-- Adjust Preferences Option -->
                     <div class="adjust-preferences-card">
                         <h4>Not finding the right matches?</h4>
