Add Reset All Profiles button to see all profiles again

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -3527,6 +3527,19 @@
                         </button>
                     </div>
                     
+                    <!-- Reset All Profiles Option -->
+                    <div class="adjust-preferences-card" style="margin-bottom: 12px; background: linear-gradient(135deg, #e74c3c 0%, #c0392b 100%);">
+                        <h4 style="color: white;">🔄 Reset All Profiles</h4>
+                        <p style="color: rgba(255,255,255,0.9);">See all profiles again (clears passed matches)</p>
+                        <button class="btn" onclick="resetAllProfiles()" style="background: white; color: #e74c3c;">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/>
+                                <path d="M3 3v5h5"/>
+                            </svg>
+                            Reset All Profiles
+                        </button>
+                    </div>
+                    
                     <!-- Adjust Preferences Option -->
                     <div class="adjust-preferences-card">
                         <h4>Not finding the right matches?</h4>
