Fix screen preview - correct screen ID mappings

--- a/prototype/manager.html
+++ b/prototype/manager.html
@@ -14879,22 +14879,22 @@
             'splash': 'splash',
             'login': 'login',
             'signup': 'signup',
-            'onboarding': 'onboarding',
-            'preferences': 'match-preferences',
+            'onboarding': 'onboarding-1',
+            'preferences': 'preferences',
             'profile-details': 'profile-details',
             'profile-setup': 'profile-setup',
             'payment': 'payment',
             'match': 'match',
-            'waiting-match': 'match-waiting-view',
-            'no-matches': 'still-searching-screen',
-            'profile-view': 'full-profile',
+            'waiting-match': 'waiting-match',
+            'no-matches': 'no-matches',
+            'profile-view': 'profile-view',
             'chat-list': 'chat-list',
             'chat': 'chat',
-            'date-plan': 'date-planning',
+            'date-plan': 'date-plan',
             'my-profile': 'my-profile',
             'edit-profile': 'edit-profile',
             'manage-photos': 'manage-photos',
-            'match-preferences-edit': 'match-preferences-edit',
+            'match-preferences-edit': 'match-preferences',
             'settings': 'settings',
             'safety-privacy': 'safety-privacy',
             'manage-subscription': 'manage-subscription',
