Add profile visibility counter to Edit Profile (6.1)

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -2499,6 +2499,13 @@
                     <h2 class="header-title">Edit Profile</h2>
                     <button class="save-btn" onclick="saveProfileAndGoBack()">Save</button>
                 </div>
+                
+                <!-- Profile Visibility Counter Bar -->
+                <div class="matches-counter-bar" id="profileVisibilityBar" style="background: linear-gradient(135deg, var(--primary) 0%, var(--primary-dark) 100%);">
+                    <span class="counter-number" id="profileVisibilityCount">0</span>
+                    <span class="counter-label">users will see your profile</span>
+                </div>
+                
                 <div class="edit-profile-content">
                     <!-- Photos Section - Link to Photo Manager -->
                     <div class="edit-section">
