Add Political Views dropdown to screen 2.2 (Profile Details)

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -489,6 +489,18 @@
                         </select>
                     </div>
 
+                    <!-- Political Views -->
+                    <div class="input-group" style="margin-bottom: 20px;">
+                        <label>Political Views</label>
+                        <select id="setupPolitics" style="width: 100%; padding: 12px; border: 1px solid var(--border); border-radius: 8px; background: var(--bg-primary);">
+                            <option value="">Prefer not to say</option>
+                            <option value="liberal">Liberal</option>
+                            <option value="moderate">Moderate</option>
+                            <option value="conservative">Conservative</option>
+                            <option value="not-political">Not Political</option>
+                        </select>
+                    </div>
+
                     <!-- Bio -->
                     <div class="input-group" style="margin-bottom: 24px;">
                         <label>Bio <span style="color: var(--text-muted); font-size: 0.85rem;">(Tell potential matches about yourself)</span></label>
