Screen 3.0: Tap match card to view full profile (4.2)

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -900,7 +900,8 @@
                         </p>
                     </div>
                     
-                    <div class="match-card accepted" id="matchCard">
+                    <div class="match-card accepted" id="matchCard" onclick="viewMatchProfile()" style="cursor: pointer;">
+                        <div class="view-profile-hint">Tap to view full profile</div>
                         <div class="match-photo">
                             <!-- Photo Carousel -->
                             <div class="photo-carousel" id="matchPhotoCarousel">
