Update diagnostics URL to AWS Amplify link

--- a/prototype/manager.html
+++ b/prototype/manager.html
@@ -8455,7 +8455,7 @@
                 const isConnected = await connectionCheck;
                 if (!isConnected) {
                     appendDiagnosticsLog('❌ App not responding! Make sure index.html is open in another tab.', 'error');
-                    appendDiagnosticsLog('💡 TIP: Open http://localhost:8080/index.html in a new tab, then run crawler again.', 'warn');
+                    appendDiagnosticsLog('💡 TIP: Open https://main.d3cpep2ztx08x2.amplifyapp.com/prototype/index.html in a new tab, then run crawler again.', 'warn');
                     stopCrawler();
                     return;
                 }
