--- a/prototype/manager.html
+++ b/prototype/manager.html
@@ -1467,46 +1467,11 @@
             </div>
         </div>
         <div class="header-actions">
-            <button class="btn btn-secondary btn-icon" onclick="importSyncData()" title="Import Sync Data">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4M17 8l-5-5-5 5M12 3v12"/>
-                </svg>
-            </button>
-            <button class="btn btn-primary btn-icon" onclick="importUserProfileFile()" title="Import User Profile (File)" style="background: var(--accent-green);">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M16 21v-2a4 4 0 00-4-4H5a4 4 0 00-4 4v2"/>
-                    <circle cx="8.5" cy="7" r="4"/>
-                    <line x1="20" y1="8" x2="20" y2="14"/>
-                    <line x1="23" y1="11" x2="17" y2="11"/>
-                </svg>
-            </button>
-            <button class="btn btn-primary btn-icon" onclick="syncFromAWS()" title="Pull Users FROM AWS" style="background: #ff9900;">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M21 12a9 9 0 11-9-9"/>
-                    <polyline points="21 3 21 9 15 9"/>
-                </svg>
-            </button>
-            <button class="btn btn-primary btn-icon" onclick="pushAllToAWS()" title="Push Users TO AWS" style="background: #3498db;">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M12 19V5M5 12l7-7 7 7"/>
-                </svg>
-            </button>
-            <button class="btn btn-secondary btn-icon" onclick="exportSyncData()" title="Export Sync Data">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4M7 10l5 5 5-5M12 15V3"/>
-                </svg>
-            </button>
-            <button class="btn btn-secondary btn-icon" onclick="refreshData()" title="Refresh">
+            <button class="btn btn-secondary btn-icon" onclick="refreshData()" title="Refresh from AWS">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M23 4v6h-6M1 20v-6h6"/>
                     <path d="M3.51 9a9 9 0 0114.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0020.49 15"/>
                 </svg>
-            </button>
-            <button class="btn btn-primary" onclick="exportAllData()">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4M7 10l5 5 5-5M12 15V3"/>
-                </svg>
-                Export
             </button>
         </div>
     </header>
