Add Tax to Legal branch in architecture diagram

--- a/prototype/manager.html
+++ b/prototype/manager.html
@@ -1835,6 +1835,7 @@
                                     <div class="flow-nodes" style="flex-direction: column; gap: 4px;">
                                         <div class="flow-node" onclick="showSection('legal')" data-component="legal"><span class="node-status yellow"></span>Patents & IP</div>
                                         <div class="flow-node" onclick="showSection('compliance')" data-component="compliance"><span class="node-status green"></span>Compliance</div>
+                                        <div class="flow-node" onclick="showSection('tax')" data-component="tax"><span class="node-status yellow"></span>Tax</div>
                                     </div>
                                 </div>
                             </div>
